Update logic in animations for deciding whether an element can transform

This change makes CompositorAnimations.cpp more closely match the logic
used in paint code for deciding whether an element's used transform
is not none.

BUG=633021

Review-Url: https://codereview.chromium.org/2225743002
Cr-Commit-Position: refs/heads/master@{#410987}

Former-commit-id: dc4a00b29ecc52a9eb29ceb433101c4075a5d84f